[package]
name = "learning_design_layered_protocol_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-compat = "0.2.3"
env_logger = "0.11.2"
futures = "0.3.30"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "time", "net", "io-util"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
